86c0w8m95: fixing bug with overflow

--- a/src/styles/common/_container.scss
+++ b/src/styles/common/_container.scss
@@ -2,6 +2,7 @@
   width: 100vw;
   margin: 0 auto;
   padding: 0 17px;
+  overflow: hidden;
 
   @include on-tablet {
     padding: 0 24px;
